--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,28 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".RegisterActivity"></activity>
         <activity android:name=".LoginActivity" />
-        <activity android:name=".RegisterActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".UniversityActivity"
+            android:parentActivityName=".MainActivity"/>
+
+        <activity android:name=".RecommendActivity"
+            android:parentActivityName=".UniversityActivity"/>
+        <activity android:name=".MajorFeesActivity"
+            android:parentActivityName=".UniversityActivity"/>
+        <activity android:name=".LocationActivity"
+            android:parentActivityName=".UniversityActivity"/>
+        <activity android:name=".AboutSchoolActivity"
+            android:parentActivityName=".UniversityActivity"/>
+
     </application>
 
 </manifest>
